fixed button size; flashcard page spacing;

--- a/css/flashcard.css
+++ b/css/flashcard.css
@@ -5,9 +5,10 @@ https://davidwalsh.name/css-flip
 https://www.w3schools.com/howto/howto_css_animate_buttons.asp
 
 ############################################################################*/
-.mainFlashcardContainer {
+#mainFlashcardContainer {
   display: flex;
   justify-content: space-between;
+  padding: 5rem;
 }
 
 #flipButton {
@@ -19,7 +20,7 @@ https://www.w3schools.com/howto/howto_css_animate_buttons.asp
   font-size: 2rem;
   color: #F5F5F5;
   padding: 1rem;
-  width: 50%;
+  width: 80%;
   text-align: center;
   -webkit-transition-duration: all 300ms ease-in;   /* Safari */
   transition-duration: all 300ms ease-in;
